address semi-separating equilibria

--- a/draft_narrow.tex
+++ b/draft_narrow.tex
@@ -181,7 +181,7 @@ Examples of a \emph{no-concessions separating equilibrium} are most likely to be
 \label{sec:cse}
 The other separating equilibrium of interest involves distrustful countries using concessions as a way of building trust. We call this the \emph{concessions separating equilibrium}. In this equilibrium, the cost of giving a concession can be worth the investment if the other country also cooperates. It is also not as risky as the \emph{no-concession separating equilibrium}. In this equilibrium, concessions are given before more substantive actions and thus remove the possibility of playing one of the cheating corners of the Prisoner's Dilemma. Concessions are a costly signal that the other country is serious about cooperating and can be used to avoid continual distrust. That is, high types make use of concessions to identify themselves as trustworthy partners in hopes of establishing peace.
 
-In the \emph{concessions separating equilibrium}, low types do not give concessions while high types give a concession in period 0. If both countries receive concessions, they know the other is a high type and both play Trust in subsequent periods. Otherwise, if even one player does not receive a concession, there is at least one low type so both countries play Fight in subsequent periods. The signaling value of concessions in period 0 means that, starting from period 1 in the Trust/Fight game, both countries play the same strategy in a separating equilibrium, that is both play Trust if there were two high signals and otherwise both play Fight.
+In the \emph{concessions separating equilibrium}, low types do not give concessions because the concession level is set as the smallest amount that will deter the impatient type from mimicking the patient type. In contrast, high types always give a concession in period 0. Thus, the patience level of both countries is fully revealed in equilibrium. If both countries receive concessions, they know the other is a high type and both play Trust in subsequent periods. Otherwise, if even one player does not receive a concession, there is at least one low type so both countries play Fight in subsequent periods. The signaling value of concessions in period 0 means that, starting from period 1 in the Trust/Fight game, both countries play the same strategy in a separating equilibrium, that is both play Trust if there were two high signals and otherwise both play Fight.
 
 Details of the analysis are in the Appendix. We begin by characterizing the concession (or \emph{gift}) giving behavior of the low type. We then present the patience threshold and gift giving behavior of the high type.
 
@@ -191,7 +191,7 @@ Details of the analysis are in the Appendix. We begin by characterizing the conc
 \end{lemma}
 \emph{Proof:} See Appendix.
 
-Low types don't give gifts in this separating equilibrium because the gift wouldn't serve any purpose: the low type will be identified through the separating behavior of the high types and there is thus nothing to gain.
+Low types don't give gifts in this separating equilibrium because the gift wouldn't serve any purpose: the low type will be identified through the separating behavior of the high types and there is thus nothing to gain.\footnote{The transmission of information about each country's type is, by definition, essential for the existence of a \emph{concessions separating equilibrium}. Thus, there cannot exist a \emph{concessions semi-separating equilibrium} where the low type gives a concession with strictly positive probability; the concessions would not transmit the information required to build trust. If no information is transmitted, then the high type has no incentive itself to give a concession, so neither is there a semi-separating equilibrium with the low type mixing between strictly positive and zero concessions where the players separate in the repeated game as in the no concessions separating equilibrium.}
 
 \begin{theorem}
 \emph{Concessions Separating Equilibrium (CSE)}
@@ -205,7 +205,7 @@ Low types don't give gifts in this separating equilibrium because the gift would
 
 This `best' concessions separating equilibrium, where `best' is from the standpoint of high-type welfare, is justified by appeal to the Intuitive Criterion equilibrium refinement, in which out of equilibrium beliefs put zero weight on types that can never gain from deviating.
 
-Interestingly, the patience threshold for this equilibrium to exist, $\de^c = \frac{W}{T+D}$, is the same as the threshold for the complete information repeated game in which deviating from ``Trust'' is discouraged through grim trigger punishments. Using concessions to separate the types therefore can be seen as making up for the imperfect information in this setting.
+Interestingly, the patience threshold for this equilibrium to exist, $\de^c = \frac{W}{T+D}$, is the same as the threshold for the complete information repeated game in which deviating from ``Trust'' is discouraged through grim trigger punishments.\footnote{When $\de = \frac{W}{T+D}$, there is also a semi-separating equilibrium where only some high types give a concession. Here, high types give a smaller expected concession and trade off a lower probability of achieving peace. We will thus focus on the pure concessions separating equilibrium in the analysis below because it provides the best chance for peace.} Using concessions to separate the types therefore can be seen as making up for the imperfect information in this setting.
 
 We complete our analysis of the \emph{concessions separating equilibrium} by comparing it to the \emph{no concessions separating equilibrium} in Section~\ref{sec:ncse}.
 
