--- a/draft_narrow.tex
+++ b/draft_narrow.tex
@@ -74,7 +74,7 @@ Control of strategically valuable territory can pose similar challenges in both 
 
 In our third archetypal example, under both the Trump and Biden administrations, the US has restricted the export of cutting-edge technology to China. China and the US are engaged in geo-strategic competition. Both countries could benefit from the more rapid innovation and growth that free trade in chips and other technology would enable, but there is risk that any technology exported will be used in the military sector to pursue advanced weapons, altering the military balance of power. As of 2023, trade in numerous advanced technologies is restricted, reducing the global pace of innovation and economic growth. 
 
-Walter (1997) observes empirically that, due to the difficulty of making efficient disarmament concessions, civil wars tend to end on the battlefield, rather than through negotiated settlement. Interstate wars over territory are similarly prone to violent, rather than negotiated, resolution (Hensel 1996), and the trajectory of competition and cooperation between the US and China remains highly uncertain. Can mediation offer a path to more settlement, peace and prosperity in these challenging contexts? 
+In all three of these archetypal examples, cooperative/peaceful outcomes are extremely challenging to reach. Walter (1997) observes empirically that, due to the difficulty of making efficient disarmament concessions, civil wars tend to end on the battlefield, rather than through negotiated settlement. Interstate wars over territory are similarly prone to violent, rather than negotiated, resolution (Hensel 1996), and the trajectory of competition and cooperation between the US and China remains highly uncertain. Can mediation offer a path to more settlement, peace and prosperity in these challenging contexts? 
 
 This paper revises our understanding of the reasons why efficient concessions are sometimes impossible to make, why inefficient concessions can sometimes be beneficial, and how mediators can both help increase the efficiency of concessions and make peace. Weapons, strategically valuable territory, and the sharing of advanced technology will not be conceded if the conceding side fears that these items may be used in future attacks against them. Countries are reluctant to make concessions that can be used against them in latter rounds of conflict or negotiation. One way to mitigate the risk of dangerous concessions is to destroy the future value of the concession---e.g. decommission weapons, attempt to reduce the strategic value of the territory being conceded, or only allow trade in less advanced technologies or technologies without military applications. Another option, and the one on which we focus in this paper, is third-party mediation. We use this model to demonstrate that a third-party mediator can facilitate negotiated settlement by increasing trust and enabling disputants to make more efficient concessions, even when there is a risk those concessions might increase the bargaining power of their opponent in the future. 
 
