Broaden conclusion language slightly
Add "public goods" in a few places where we only talk about peace

--- a/draft_narrow.tex
+++ b/draft_narrow.tex
@@ -176,7 +176,7 @@ Here, as in each further iteration of the model, we define a high type as a coun
 
 In this equilibrium, two mutually distrustful countries \emph{behave} as if they trust each other, taking a risk. This generally will happen when the result of trusting and then being betrayed is not catastrophic, or the odds of such a scenario are small. This is representative of a case where countries have suspicions about each other, but proceed anyway. 
 
-Examples of a \emph{no-concessions separating equilibrium} are most likely to be those where countries have traditionally had good relations but something has recently come in the way. Certain relationships between the USA and countries alienated by WikiLeaks -- such as Italy -- would be an example. Italy essentially laughed off the criticisms and reassured the USA of its commitment to their relationship. Warsaw Pact countries generally allowed the USSR similar leeway; it was better to have occasionally imperfect cooperation than conflict. Some events can disrupt trust without completely derailing cooperation. 
+%Examples of a \emph{no-concessions separating equilibrium} are most likely to be those where countries have traditionally had good relations but something has recently come in the way. Certain relationships between the USA and countries alienated by WikiLeaks -- such as Italy -- would be an example. Italy essentially laughed off the criticisms and reassured the USA of its commitment to their relationship. Warsaw Pact countries generally allowed the USSR similar leeway; it was better to have occasionally imperfect cooperation than conflict. Some events can disrupt trust without completely derailing cooperation. 
 
 \subsection{Concessions Separating Equilibrium}
 \label{sec:cse}
@@ -399,7 +399,7 @@ The value of truth telling by the mediator has been examined in the literature. 
 \section{Conclusion}
 In situations of perpetual conflict, concessions have been shown in the empirical literature to ease distrust. This paper introduces a mechanism by which this might work. In our model's setup, there are three classes of interesting equilibria: first, if prior trust is low a no-concessions pooling equilibrium exists, which is essentially a state of war for all types. Second, if prior trust is sufficiently high, a no-concessions pooling equilibrium exists where high types trust in the first period and can maintain that trust if both are high types. Third, a concessions giving separating equilibrium exists where high types offer concessions to eliminate the distrust. This is the most interesting class of equilibria for our purposes.
 
-While parties generally are better off when concessions are efficient, we have shown that inefficiency may be useful. In particular, if concessions may be used to harm the giver materially, it may be better to give inefficient concessions. This explanation captures the hesitancy of nations to fully engage in moving forward with a peace process when there is mutual distrust. 
+While parties generally are better off when concessions are efficient, we have shown that inefficiency may be useful. In particular, if concessions may be used to harm the giver materially, it may be better to give inefficient concessions. This explanation captures the hesitancy of nations to fully engage in moving forward with a peace process or other cooperation when there is mutual distrust. 
 
 At first glance, it may seem somewhat abstract to model a concession as a number. However, the magnitude of concessions can indeed vary: often concessions really do come in sizes, for example the number of prisoners released, an amount of land ceded, or an amount of time given to carry out actions. But while magnitudes often do vary, this points to a very real caveat. The nature of the concessions is sometimes non-negotiable. For instance if one country demands release of hostages, it is not possible -- or at least not realistic -- for the other country to give the equivalent value in land, cash or weapons.
 
@@ -407,11 +407,11 @@ This points out that when we think about concessions, we should think about thei
 
 The effectiveness of mediation is debated in the literature; this paper shows that a third party mediator can remedy a particular kind of inefficiency if she is trusted. One contribution of this paper is to show a new mechanism through which a mediator can help.
 
-This model focuses on manipulative mediation, which is indeed used in resolving conflicts. However, the usefulness of mediation in this case relies on the mediator being both perfectly trustworthy and perfectly able to enforce concessions. Such an all-powerful mediator is a strong assumption, and while useful as a benchmark, it is unlikely to exist in all scenarios. It would be useful as a further exercise to examine the effectiveness of mediators with different strengths of enforcement capabilities. 
+This model focuses on manipulative mediation, which is indeed used in resolving conflicts and achieving cooperation. However, the usefulness of mediation in this case relies on the mediator being both perfectly trustworthy and perfectly able to enforce concessions. Such an all-powerful mediator is a strong assumption, and while useful as a benchmark, it is unlikely to exist in all scenarios. It would be useful as a further exercise to examine the effectiveness of mediators with different strengths of enforcement capabilities. 
 
 While it is important theoretically to show how a mediator can help in conflict situations, it should be noted that mediation is not free, at least to the providing (third) party. Therefore, the inefficiencies borne by the inefficient concessions and/or by the ongoing conflict must not be outweighed by the cost of providing the mediation. If the model accurately captures the costs, the expected savings of mediation can be calculated and therefore the value of mediation in a specific scenario can be determined. This will allow the mediator to analyze whether her involvement is worthwhile. 
 
-This paper shows that inefficient concessions may be used to achieve peace when efficient concessions are not sufficient to do so; it also demonstrates how a mediator can achieve peace in these situations when the parties to the conflict cannot do so on their own. Opportunities for further research clearly include looking at the roles of different types of mediation. Because of the many humanitarian, security and diplomatic implications of this work, both deeper and broader analysis is required.
+This paper shows that inefficient concessions may be used to achieve peace or cooperation to provide of other public goods when efficient concessions are not sufficient to do so; it also demonstrates how a mediator can achieve cooperation in these situations when the parties to the conflict cannot do so on their own. Opportunities for further research clearly include looking at the roles of different types of mediation. Because of the many humanitarian, security and diplomatic implications of this work, both deeper and broader analysis is required.
 
 \section{Appendix}
 
