re-work mediation section to put emphasis on mediator

--- a/draft_narrow.tex
+++ b/draft_narrow.tex
@@ -336,17 +336,17 @@ Inefficient concessions are optimal when there's a good chance of facing a low t
 
 \section{Mediation}
 \label{sec:med}
-The results in this paper thus far have relied on bilateral engagement. We will now consider the involvement of a mediator when concessions have future material value that can benefit or harm the giver. 
+The results in this paper thus far have relied on bilateral engagement. We will now consider the involvement of a mediator when concessions have future material value. We model the mediator as solving a mechanism design problem to create a plan for concessions that elicits truthful revelation of the parties' abilities to commit to cooperation. 
 
-Because many conflicts occur in an international arena with no clear enforceable rule of law (Waltz 2001), much of the literature has focused on self-enforcing mechanisms. If however a credible third party exists, then results beyond self enforcing agreements can be relevant.  A mediator with such enforcement ability is said to use manipulative mediation, specifically if she ``offered to verify compliance with the agreement''  or ``took responsibility for concessions''  (Bercovitch 1997). We will now introduce a mediator who does the latter.\footnote{Here the parties' actions in the stage game as well as their choices of whether to spend concessions on the civil versus the military sector are assumed to derive from their type, so there is no need for the mediator to enforce these decisions once the type is revealed. Thus, we do not assume that the mediator can do either because it is not necessary.} 
+Because many conflicts occur in an international arena with no clear enforceable rule of law (Waltz 2001), much of the literature has focused on self-enforcing mechanisms. If, however, a credible third party exists, then results beyond self enforcing agreements can be relevant.  A mediator with such enforcement ability is said to use manipulative mediation, specifically if she ``offered to verify compliance with the agreement''  or ``took responsibility for concessions''  (Bercovitch 1997). We will now introduce a mediator who does the latter.\footnote{Here the parties' actions in the stage game as well as their choices of whether to spend concessions on the civil versus the military sector are assumed to derive from their type, so there is no need for the mediator to enforce these decisions once the type is revealed. Thus, it is not necessary to assume that the mediator can do both.} 
 
-The model setup is as before, but instead of parties being free to choose their concession levels, the mediator solicits type reports and then enforces incentive compatible concessions. The Revelation Principle tells us that it is without loss of generality to restrict attention to direct mechanisms, that is, mechanisms in which countries simply declare their types (Myerson 1979). This mediator will be modeled as a mechanism $M$.
+The model setup is as before, but instead of parties being free to choose their concession levels, the mediator solicits type reports and then enforces incentive compatible concessions. This mediator will be modeled as a mechanism $M$.
 
-After learning their type, each country chooses to participate in the mechanism or not; that is, whether to send a message that declares its type to be High or Low. By the revelation principle, it is again without loss of generality to consider equilibria in which both countries participate and send truthful reports. Therefore we have a mechanism $M$ that inputs the reports $t_i \in \left\{High,Low\right\}$ for $i \in \left\{1,2\right\}$ and outputs the required concessions $g_i$ and efficiency levels $e_i$ so that $ M:(t_1,t_2)\rightarrow( e_1, g_1; e_2,g_2)$. The countries are bound to send the mandated concessions.
+After learning its type, each country chooses to participate in the mechanism or not. By the Revelation Principle (Myerson 1979), it is without loss of generality to restrict attention to direct mechanisms\footnote{Direct mechanisms are those in which countries simply declare their types.} and to focus on equilibria in which both countries participate and send truthful reports. Participation in the mechanism therefore involves sending a message that declares one's type to be High or Low and then being bound to send the mandated concessions. Formally, the mechanism $M$ inputs the reports $t_i \in \left\{High,Low\right\}$ for $i \in \left\{1,2\right\}$ and outputs the required concessions $g_i$ and efficiency levels $e_i$ so that $ M:(t_1,t_2)\rightarrow( e_1, g_1; e_2,g_2)$.
 
-In Sections~\ref{sec:bench} and \ref{sec:IC}, the same concession must be sent to both types since types are private information. Importantly, here the mechanism $M$ can differentiate by recipient type. Otherwise, the setup is the same as in Section~\ref{sec:matval} where concessions have future material value that can optionally be destroyed.
+In Sections~\ref{sec:bench} and \ref{sec:IC}, the same concession must be sent to both types since types are private information. Importantly, here the mechanism $M$ can differentiate by recipient type. Otherwise, the setup is the same as in Section~\ref{sec:matval} where concessions have future material value that can optionally be destroyed. In the mechanism design context, we focus on the incentive compatibility constraints that must be satisfied for each type to truthfully reveal its type.
 
-As usual, truthful self-revelation requires that the incentive compatibility constraint for each type must be satisfied.
+We find that, to prevent the low type from being tempted to misrepresent its type in order to receive the gift, some value of the concessions must be destroyed. That is, $e<1$, implying that the gifts mandated by the mediator must be inefficient. 
 
 \begin{lemma}
 	A manipulative mediator cannot facilitate the most efficient concessions, i.e. $e=1$ is not incentive compatible under mechanism $M$. 
@@ -354,24 +354,24 @@ As usual, truthful self-revelation requires that the incentive compatibility con
 \end{lemma}
 \emph{Proof}: See Appendix.
 
-In order to make the mechanism incentive compatible for the low types, some value of the concessions must be destroyed, i.e. $e<1$, so that the low type is not tempted to misrepresent its type in order to receive the gift. The range of efficiency that allows for a mechanism $M$ to be incentive compatible and individually rational for both types is given in Theorem~\ref{theorem:med}.
+The range of efficiency that allows for a mechanism $M$ to be incentive compatible and individually rational for both types is given in Theorem~\ref{theorem:med}.
 
 \begin{theorem}
 \emph{Mediation}
 \begin{enumerate}
-		\item[(a)] The mediation mechanism $M$ is incentive compatible and individually rational for the low type when the specified concession is greater than or equal to $\frac{\left(1 - \de_l \right)\left(T +D \right)}{p - e\left(p +(1-\de_l)T +W \right)},$ with the denominator of this expression strictly positive.
-		\item[(b)] The mediation mechanism $M$ is incentive compatible and individually rational for the high type either when $Te < (1-\de_h)(1-e)$ or the specified concession is less than or equal to $\frac{ T + D - W}{Te - (1-\de_h)(1-e)}$.
+		\item[(a)] A mediator using mechanism $M$ must ensure that $M$ is incentive compatible and individually rational for the low type. This happens when the specified concession is greater than or equal to $\frac{\left(1 - \de_l \right)\left(T +D \right)}{p - e\left(p +(1-\de_l)T +W \right)},$ with the denominator of this expression strictly positive.
+		\item[(b)] A mediator using mechanism $M$ must ensure that $M$ is incentive compatible and individually rational for the high type. This happens when either $Te < (1-\de_h)(1-e)$ or the specified concession is less than or equal to $\frac{ T + D - W}{Te - (1-\de_h)(1-e)}$.
 \end{enumerate}
 	\label{theorem:med}
 \end{theorem}
 \emph{Proof:} See Appendix.
 
-The low type incentive compatibility constraint determines a lower bound on the size of the concession specified by the mechanism; this puts an upper bound on how efficient concessions can be. In some cases, the high type incentive constraint also provides an upper bound on the size of the concession.
+In part (a), we see that the low type incentive compatibility constraint determines a lower bound on the size of the concession specified by the mechanism. This puts an upper bound on how efficient concessions can be. In part (b), we see that the high type incentive constraint also provides an upper bound on the size of the concession in some cases.
 
-Ultimately, mediation is desirable if it can improve welfare or improve the chances for peace. Theorem~\ref{theorem:medwel} shows that the mediation mechanism $M$ can do both.
+Ultimately, mediation is desirable if it can improve welfare or improve the chances for peace. Theorem~\ref{theorem:medwel} shows that a mediator who implements mechanism $M$ can do both.
 
 \begin{theorem}
-	When concessions have future material value, the mediation mechanism $M$ can be used to
+	When concessions have future material value, a mediator can use mechanism $M$ to
 	\begin{enumerate}
 		\item[(a)] improve welfare by increasing the efficiency of concessions when a \emph{concessions separating equilibrium with efficient gifts} is not possible; or
 		\item[(b)] improve welfare despite reducing the efficiency of concessions when a \emph{concessions separating equilibrium with efficient gifts} is possible; or
@@ -387,13 +387,13 @@ Here, inefficiency can be mitigated because the mediator is able to mandate conc
 
 Part (b) may be somewhat surprising. Here, a mediator would insert inefficiency when it is not necessary to make peace. This happens when the possibility of the low type using concessions against their negotiating partner and the magnitude of the damages that can be imposed are small enough that efficient gifts are possible but large enough that the full efficiency of the gifts has a large, negative impact on welfare. The mediator removes the possibility of the future damages, but has to require some inefficiency in order to incentivize low types to truthfully reveal.
 
-(c) When the impacts of future material value are too strong, i.e when the probability of a low type is too high and/or the damages from investing in military power are too large, the parties cannot make peace on their own even with the possibility of signaling their type through concessions. By ensuring that only high types exchange gifts, the mediator removes this threat of damaging behavior by one's negotiating partner as well as the cost of giving the concession to a low type. This allows types with lower patience levels to separate through the mechanism when those same types cannot separate in the bilateral game with concessions with future material value.
+Part (c) is relevant when the impacts of future material value are too strong, i.e when the probability of a low type is too high and/or the damages from investing in military power are too large. In this case, the parties cannot make peace on their own even with the possibility of signaling their type through concessions. By ensuring that only high types exchange gifts, the mediator removes the threat of damaging behavior by one's negotiating partner as well as the cost of giving the concession to a low type. Here, the help of the mediator allows types with lower patience levels to separate when those same types cannot separate in the bilateral game with concessions with future material value.
 
 Thus a mediator is able to both improve welfare and bring willing parties to the table to give the concessions necessary to achieve peace. The improvements by the mediator here do not rely on the mediator's private information as in the models of Kydd (2003), Rauchhaus (2006) and Smith and Stam (2003). Therefore the mediator's preferences need not be an important factor in her participation. So long as the costs are small enough to be worth her participation the mediator can effectively enter and assist in solving the conflict.
 
 One might worry about the requirement that the mediator be willing and able to ensure that the specified concessions are delivered. While it is by no means guaranteed that a mediator who will play this role exists for every conflict, it is not difficult to believe that such a mediator exists for many conflicts. We do not require a formal international enforcement mechanism, but rather that the mediator has, and is willing to use, sufficient leverage to punish a deviating party. Common examples of such punishments are financial or trade sanctions, or the withdrawal of aid or military support. Further, the mechanism can work if the mediator is either (1) only able to incentivize some portion of the concessions or (2) enforces the concessions with some probability less than 1. This would tighten the low type's incentive constraint and loosen the high type's incentive constraint, creating a different level of optimal efficiency of the concessions.\footnote{To see this, in the incentive constraints in the proof of Theorem~\ref{theorem:med}, replace $g_h$ with $q \cdot g_h$, where $q$ represents the proportion of the concession that can be enforced or the probability with which the full concession is enforced.} 
 
-The value of truth telling by the mediator has been examined in the literature. Kydd (2003) studies bias in mediation and how a mediator can credibly communicate information to the parties. Conversely Horner et al. (2010) rely on the mediator to ``hoard'' information in order to be able to improve on unmediated interaction.\footnote{Horner et al. (2010) take cheap talk communication as their benchmark of unmediated communication, whereas we take the unmediated signaling game as our benchmark.} In our model, a successful mediator relies on the parties trusting her. However, here the mediator had no incentive to lie: lying can only potentially hurt the high types, the only type who the mediator can possibly help.
+The value of truth telling by the mediator has been examined in the literature. Kydd (2003) studies bias in mediation and how a mediator can credibly communicate information to the parties. Conversely Horner et al. (2010) rely on the mediator to ``hoard'' information in order to be able to improve on unmediated interaction.\footnote{Horner et al. (2010) take cheap talk communication as their benchmark of unmediated communication, whereas we take the unmediated signaling game as our benchmark.} In our model, a successful mediator relies on the parties trusting her. However, here the mediator has no incentive to lie: lying can only potentially hurt the high types, the only type who the mediator can possibly help.
 
 
 \section{Conclusion}
