add footnote about bargaining theory of war contrasts

--- a/draft_narrow.tex
+++ b/draft_narrow.tex
@@ -113,7 +113,7 @@ These empirical results have until recently lacked strong theoretical foundation
 \section{Model}
 \label{sec:model} 
 
-Countries\footnote{Players will be referred to as countries, though it could also be appropriate to think of players as intra-state actors, as in a civil war.} are of two possible types, high and low. A high type discounts future period payoffs at rate $\delta_h$ and a low type discounts at $\delta_l$ where $\delta_h >\delta_l$ and $\delta_h ,\delta_l$ $\in [0,1].$ Before the start of the game, nature independently determines the types of country 1 and country 2. The type distinction, as explained in detail later, encompasses the country's willingness to cooperate in solving the conflict; that is, throughout the analysis we will define a low type to be a player whose only sequentially rational strategy is to remain in conflict in all periods. It is not necessary to think of a type as fixed; it can change as regimes and relations between countries change.\footnote{We can enrich the model to assign a probability (and even different probabilities) of a country's type shifting from high to low or low to high in a given period.}
+Countries\footnote{Players will be referred to as countries, though it could also be appropriate to think of players as intra-state actors, as in a civil war.} are of two possible types, high and low. A high type discounts future period payoffs at rate $\delta_h$ and a low type discounts at $\delta_l$ where $\delta_h >\delta_l$ and $\delta_h ,\delta_l$ $\in [0,1].$ Before the start of the game, nature independently determines the types of country 1 and country 2. The type distinction, as explained in detail later, encompasses the country's willingness to cooperate in solving the conflict; that is, throughout the analysis we will define a low type to be a player whose only sequentially rational strategy is to remain in conflict in all periods.\footnote{This is in contrast to the bargaining theory of war, where a high(low) type has strong(weak) military capability that then interacts with a symmetric, known level of $\delta$. This accounts for the different impact of $\delta$ in the two models.} It is not necessary to think of a type as fixed; it can change as regimes and relations between countries change.\footnote{We can enrich the model to assign a probability (and even different probabilities) of a country's type shifting from high to low or low to high in a given period.}
 
 The probability of nature selecting the high type for a given country is $p$. The probability of nature selecting the low type is $1-p$.\footnote{Note that parameters are symmetric across countries, as is consistent with the literature. Qualitative results do not depend on this being the case, and equilibria and equilibrium concessions can easily be calculated with asymmetric parameters between players.}  Countries are aware of their own type, but not the type of the other country.  Similar scenarios have been modeled as credible commitment problems in the bargaining literature. Our model can be thought of as a reduced form bargaining model, but it can also be considered somewhat differently. That is, when trust is the issue to be solved, concessions are one way in which countries can signal their commitment.  By modeling conflict in such a way, we can also gain insight as to how a third party can ameliorate trust issues inherent to the conflict. 
 
