add comparative statics on p

--- a/draft_narrow.tex
+++ b/draft_narrow.tex
@@ -281,7 +281,7 @@ $\de_h$ is not involved in any of these calculations, so we can see that for any
 
 Comparative statics provide intuition for why using concessions with future material value makes it harder to achieve peace. The patience threshold is decreasing in $T$ because the benefit from cooperating with another high type increases. Similarly, the threshold is increasing in $D$ because the magnitude of future damages from pairing with a low type increases. Perhaps less obvious is the impact of $W$: here the threshold is again increasing. This is because the high type's own temptation to not give a gift and to use a received concession for military purposes increases in $W$.
 
-When the low type's patience level $\de_l$ increases, the high type's patience threshold decreases because a smaller gift is required to disincentivize the low type from pretending to be a high type. Finally, and perhaps surprisingly, the patience threshold is increasing in $p$. This happens because the gift must be larger in order to discourage low types from giving a gift, and this effect outweighs the increased attractiveness to the high type that comes directly from the increased probability of positive impacts from the future material value.\footnote{Comparative statics calculations available from the authors upon request.} 
+When the low type's patience level $\de_l$ increases, the high type's patience threshold decreases because a smaller gift is required to disincentivize the low type from pretending to be a high type. Finally, the patience threshold is decreasing in $p$, the proportion of cooperative types in the population. This happens because a higher $p$ increases the chances of cooperation, a reciprocated gift, and the benefits from the associated public goods. This gain outweighs the cost of giving a larger gift, which is necessary to deter the low type from mimicking the high type when the probability of receiving a gift increases with $p$. In contrast, in the model with no material value---where the incentives are the same as in the model of the next section where material value can be destroyed---the need to give a larger gift is exactly offset by the increased value of cooperation when there is no material value. Thus, an increase in $p$ increases the range of patience levels under which cooperation can be achieved when there is material value but makes no change if there is no material value.\footnote{Comparative statics calculations available from the authors upon request.} 
 
 Thus only an increase in the benefit from `Peace' and an increase in the low type's patience level make it easier to achieve `Peace' when gifts have future material value. Increases in all other parameters make it harder to achieve `Peace.'
  
