--- a/draft_narrow.tex
+++ b/draft_narrow.tex
@@ -144,7 +144,7 @@ We will use grim trigger punishments throughout: that is, (Fight, Fight) will be
 
 Equilibrium payoffs beginning from round 1 are now easily described by noting only the collective first round behavior.\footnote{If a parameter of the model changes after period 0, the equilibrium may be disrupted. Although it is beyond the scope of this paper, one could model this by adding a probability of equilibrium disruption followed by a new round of concessions that would essentially re-start the game--albeit with altered parameters.} Let $X_{ij}$ represent the sum of discounted payoffs for country $i$ where subscripts represent first round strategies of that country. If both countries play T in round 1, the corresponding payoff to country $i$ is represented as $ X_{TT}^i=\frac {T}{1- \delta_i}$. Likewise $X_{TF}^i=({-D}+\frac{\delta_i(W-D)}{1- \delta_i} )$, $ X_{FF}^i=\frac{W-D}{1- \delta_i}$, and  $X_{FT}^i=T+W +\frac{\delta_i(W-D)}{1- \delta_i}$. $X_{FT}^h$, for example, represents payoffs for the high type of country 1 when country 1 fights and country 2 trusts in the first period. Note that because types have different discount factors, the payoffs differ by type.
 
-Parameters are common knowledge with the exception of $\delta_i$, which is country $i$'s private information. We take achieving peace, or more broadly, achieving the provision of public goods, as the normative goal with respect to advancing social welfare. Only high types are capable of making peace/providing public goods, and thus we will take as the measure of social welfare to be the sum of the participating high types’ utilities.
+Parameters are common knowledge with the exception of $\delta_i$, which is country $i$'s private information. We take achieving peace, or more broadly, achieving the provision of public goods, as the normative goal with respect to advancing social welfare. Only high types are capable of making peace/providing public goods, and thus we will take the measure of social welfare to be the sum of the participating high types’ utilities.
 
 \section{Analysis of Benchmark Cases}
 \label{sec:bench}
